--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ing. Luis Pincay Toala",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^3.0.2"
   }
 }
