--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "API del módulo del estudiante del aplicativo APPIT",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "Ing. Luis Pincay Toala",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
+    "nodemon": " ^3.0.2"
   }
 }
