Configuración de la base de datos y consulta a tabla estudiante

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT = 4000
+MYSQL_HOST = localhost
+MYSQL_USER = itsup_aplicativo
+MYSQL_PASSWORD = @appit$itsup]icep.
+MYSQL_DB = itsup_aplicativo
